+ Mejora de estilos, traducciones etc...

--- a/dash/templates/dash/add_dashboard_widget_ajax.html
+++ b/dash/templates/dash/add_dashboard_widget_ajax.html
@@ -4,8 +4,7 @@
         <div class="col l4 s12 offset-l4">
             <div class="wrapper-bg"></div>
             <div class="hero-unit-small center">
-                <h2 class="content-title">{% blocktrans with plugin.name as plugin_name %}Add {{ plugin_name }} to
-                    Dashboard{% endblocktrans %}</h2>
+                <h2 class="content-title">{% blocktrans with plugin.name as plugin_name %}Add {{ plugin_name }} to Dashboard{% endblocktrans %}</h2>
             </div>
         </div>
         <div class="col l4 s12 offset-l4">
