--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col l12 m12 s12 container-gallery">
                 <a id="btn-upload-photo" class="btn-floating btn-large waves-effect waves-light blue darken-1"><i
-                        class="material-icons">add</i></a>
+                        class="material-icons" title="Subir multimedia a mi galería">add</i></a>
                 <div class="row">
                     {% if object_list %}
                         {% include 'photologue/photo_gallery_page.html' %}
