--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -97,12 +97,6 @@ Base para la interfaz en comun de todos los usuarios.
                 <input id="parent" name="parent" type="hidden">
                 <div class="row">
                     <div class="col s12">
-                        <button type="submit" id="sendformpubli"
-                        class="waves-effect waves-light btn right blue">
-                        Enviar<i class="material-icons right">send</i></button>
-                        <button type="button"
-                        class="waves-effect waves-light btn right transparent black-text close">Cerrar<i
-                        class="material-icons right">close</i></button>
                         <div class="file-field">
                             <div class="btn blue lighten-2">
                                 <span><i class="material-icons md-24">photo_camera</i></span>
@@ -113,6 +107,16 @@ Base para la interfaz en comun de todos los usuarios.
                                 placeholder="Subir imágenes o videos">
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12">
+                        <button type="submit" id="sendformpubli"
+                        class="waves-effect waves-light btn right blue">
+                        Enviar<i class="material-icons right">send</i></button>
+                        <button type="button"
+                        class="waves-effect waves-light btn right transparent black-text close">Cerrar<i
+                        class="material-icons right">close</i></button>
                     </div>
                 </div>
             </form>
@@ -146,12 +150,6 @@ Base para la interfaz en comun de todos los usuarios.
                 <input id="self_parent" name="parent" type="hidden">
                 <div class="row">
                     <div class="col s12">
-                        <button type="submit" id="sendselfformpubli"
-                        class="waves-effect waves-light btn right blue">
-                        Enviar<i class="material-icons right">send</i></button>
-                        <button type="button"
-                        class="waves-effect waves-light btn right transparent black-text close">Cerrar<i
-                        class="material-icons right">close</i></button>
                         <div class="file-field">
                             <div class="btn blue lighten-2">
                                 <span><i class="material-icons md-24" aria-hidden="true">photo_camera</i></span>
@@ -162,6 +160,16 @@ Base para la interfaz en comun de todos los usuarios.
                                 placeholder="Subir imágenes o videos">
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12">
+                        <button type="submit" id="sendselfformpubli"
+                        class="waves-effect waves-light btn right blue">
+                        Enviar<i class="material-icons right">send</i></button>
+                        <button type="button"
+                        class="waves-effect waves-light btn right transparent black-text close">Cerrar<i
+                        class="material-icons right">close</i></button>
                     </div>
                 </div>
             </form>
@@ -243,7 +251,7 @@ Base para la interfaz en comun de todos los usuarios.
                         {{ groupForm.description }}
                         <label for="id_description">Escribe una descripcion para el grupo.</label>
                     </div>
-                </div> 
+                </div>
                 <div class="row">
                     <div class="file-field input-field">
                         <div class="btn blue lighten-2">
