--- a/skyfolk/templates/services/service_form.html
+++ b/skyfolk/templates/services/service_form.html
@@ -15,7 +15,7 @@
         {%  if services == 0 %}
         <div class="alert alert-warning">
             ¡Ya has activado todos los servicios existentes!
-            <a href="{% url 'user_services' %}">Ir a mis servicios activos</a>
+            <a href="{% url 'user_services' %}">Mis servicios</a>
         </div>
         {%  else  %}
         <form method="post" role="form" class="form-horizontal" action="">
