--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -88,7 +88,7 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
             </div>
         </div>
         <div class="col s12"></div>
-        <div class="col s10 m10 l3 info-paw" id="personal-card-info">
+        <div class="col l3 s12 info-paw" id="personal-card-info">
             <div class="info-nav default-div">
                 <div class="info-wrapper-pic">
                     <div class="info-user-pic">{% avatar user_profile "90x90" %}</div>
