--- a/skyfolk/templates/groups/ajax_load_group_replies.html
+++ b/skyfolk/templates/groups/ajax_load_group_replies.html
@@ -9,7 +9,16 @@
                 <div class="wrapper"
                      {% if node.level > 0 %}style="min-width: 98% !important;"{% endif %}>
                     <div class="box">
-            <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
+                        <div class="row">
+                            <div class="articulo col s12">
+                                <div class="row">
+                                    <div class="image col l1 m2 s2"
+                                         {% if user.id == node.author.id %}title="¡Eres el autor!"
+                                         style="box-shadow: 0 1px 5px rgba(129, 199, 132, 1);"{% endif %}>
+                                        <div class="usr-img img-responsive">{% avatar node.author %}</div>
+                                    </div>
+                                    <div class="col l11 s10">
+                                        <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
                   data-delay="50"
                   data-tooltip="Ver conversación completa"
                   data-url="{% url "publications_groups:detail_group_publication" pk=node.id %}">
@@ -21,15 +30,6 @@
                                   data-delay="50"
                                   data-tooltip="Editar comentario"><i class="material-icons md-18">mode_edit</i></span>
                         {% endif %}
-                        <div class="row">
-                            <div class="articulo col s12">
-                                <div class="row">
-                                    <div class="image col l1 m2 s2"
-                                         {% if user.id == node.author.id %}title="¡Eres el autor!"
-                                         style="box-shadow: 0 1px 5px rgba(129, 199, 132, 1);"{% endif %}>
-                                        <div class="usr-img img-responsive">{% avatar node.author %}</div>
-                                    </div>
-                                    <div class="col l10 m12 s9">
                                         <h2 class="h22"><a
                                                 href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                                             {% if node.parent %}
