--- a/skyfolk/templates/account/cf-privacity.html
+++ b/skyfolk/templates/account/cf-privacity.html
@@ -29,7 +29,7 @@
                         <label>Nivel de privacidad</label>
                     </div>
                 </div>
-                <button name='action_add' class="btn btn-info" type="submit">Salvar cambios</button>
+                <button name='action_add' class="btn blue right" type="submit">Salvar cambios</button>
             </form>
         </div>
     </div>
