--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -61,7 +61,7 @@ Template para la configuracion del perfil de usuario
                         <div class="col l6 s12">
                             <div class="file-field">
                                 <p>{{ perfil_form.backImage.errors }}</p>
-                                <div class="btn blue darken-1 waves-effect wavesl-light">
+                                <div class="btn blue waves-effect waves-light">
                                     <span>Imagen de fondo</span>
                                     <input id="id_backImage" name="image" type="file" class="avatar-input">
                                 </div>
@@ -74,7 +74,7 @@ Template para la configuracion del perfil de usuario
                             </div>
                         </div>
                         <div class="col l6 s12">
-                            <a id="crop-image" class="waves-effect waves-light btn blue darken-1 right">Recortar
+                            <a id="crop-image" class="waves-effect waves-light btn blue right">Recortar
                                 <i class="material-icons right">crop</i>
                             </a>
                         </div>
@@ -91,7 +91,7 @@ Template para la configuracion del perfil de usuario
                     </div>
                 </div>
             </div>
-            <button class="btn btn-info right blue darken-1"id="boton-perfil" type="submit">Salvar cambios</button>
+            <button class="btn right blue"id="boton-perfil" type="submit">Salvar cambios</button>
         </div>
     </form>
 {% comment %}
