--- a/skyfolk/templates/account/email.html
+++ b/skyfolk/templates/account/email.html
@@ -56,11 +56,11 @@
                     {% endfor %}
                 </div>
                 <div class="buttonHolder">
-                    <button class="btn blue darken-1 secondaryAction" type="submit"
+                    <button class="btn blue right secondaryAction" type="submit"
                             name="action_primary">{% trans 'Make Primary' %}</button>
-                    <button class="btn blue darken-1 secondaryAction" type="submit"
+                    <button class="btn blue right secondaryAction" type="submit"
                             name="action_send">{% trans 'Re-send Verification' %}</button>
-                    <button class="btn blue darken-1 primaryAction" type="submit"
+                    <button class="btn blue right primaryAction" type="submit"
                             name="action_remove">{% trans 'Remove' %}</button>
                 </div>
             </fieldset>
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </div>
-        <button class="waves-effect waves-light btn blue darken-1" name="action_add"
+        <button class="waves-effect waves-light btn blue right" name="action_add"
                 type="submit">{% trans "Add E-mail" %}</button>
     </form>
 
