--- a/skyfolk/templates/account/shared_publication.html
+++ b/skyfolk/templates/account/shared_publication.html
@@ -20,7 +20,7 @@
 <blockquote class="z-depth-2">
     <div class="row info-publication">
         <div class="chip">
-            {% avatar shared_publication.author "60x60" %}
+            {% avatar shared_publication.author 60 %}
             <a href="{% url 'user_profile:profile' shared_publication.author %}">@{{ shared_publication.author }}</a>
         </div>
         <a class="white-text blue right btn"
