--- a/user_guide/templates/user_guide/window.html
+++ b/user_guide/templates/user_guide/window.html
@@ -14,11 +14,11 @@
                 {{ html|safe }}
             </div>
 
-            <div class="col s12 django-user-guide-counter">
+            <div class="col s12 django-user-guide-counter right">
                 <span>Consejo 1 de 1</span>
-                <div class="right django-user-guide-window-nav">
-                    <button class="django-user-guide-btn django-user-guide-back-btn">&larr; Atrás</button>
-                    <button class="django-user-guide-btn django-user-guide-next-btn">Siguiente &rarr;</button>
+                <div class="django-user-guide-window-nav">
+                    <button class="waves-effect waves-light btn blue django-user-guide-btn django-user-guide-back-btn">&larr; Atrás</button>
+                    <button class="waves-effect waves-light btn blue django-user-guide-btn django-user-guide-next-btn">Siguiente &rarr;</button>
                     <button class="waves-effect waves-light btn blue django-user-guide-btn django-user-guide-done-btn">Hecho</button>
                 </div>
             </div>
