--- a/avatar/templates/avatar/add.html
+++ b/avatar/templates/avatar/add.html
@@ -37,7 +37,7 @@
                 <div class="file-field input-field">
                     {{ upload_avatar_form.avatar.errors }}
                     <div class="btn blue darken-1 waves-effect waves-light">
-                        <span>Imágen</span>
+                        <span>Imagen</span>
                         {{ upload_avatar_form.avatar }}
                     </div>
                     <div class="file-path-wrapper">
@@ -52,7 +52,7 @@
                     <label for="id_url_image" class="avatar_from_url">{{ upload_avatar_form.url_image.label }}</label>
                 </div>
             </div>
-            {% csrf_token %}<input class="btn blue darken-1 waves-effect waves-light left" type="submit"
+            {% csrf_token %}<input class="btn blue waves-effect waves-light right" type="submit"
                                    value="{% trans "Upload New Image" %}"/>
         </form>
     </div>
