--- a/avatar/templates/avatar/change.html
+++ b/avatar/templates/avatar/change.html
@@ -59,14 +59,14 @@
         <div class="file-field input-field">
             {{ upload_avatar_form.avatar.errors }}
             <div class="btn blue darken-1 waves-effect waves-light">
-                <span>Imágen</span>
+                <span>Imagen</span>
                 {{ upload_avatar_form.avatar }}
             </div>
             <div class="file-path-wrapper">
                 <input class="file-path validate" type="text">
             </div>
         </div>
-        {% csrf_token %}<input class="btn blue darken-1 waves-effect waves-light left" type="submit"
+        {% csrf_token %}<input class="btn blue waves-effect waves-light right" type="submit"
                                value="{% trans "Upload New Image" %}"/>
     </form>
 </div>
