--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -91,7 +91,7 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
         <div class="col l3 s12 info-paw" id="personal-card-info">
             <div class="info-nav default-div">
                 <div class="info-wrapper-pic">
-                    <div class="info-user-pic">{% avatar user_profile "90x90" %}</div>
+                    <div class="info-user-pic">{% avatar user_profile 90 %}</div>
                 </div>
                 <div class="personal-info">
                     <h1 id="info-user-name-profile" class="info-user-name" data-id="{{ user_profile.username }}">
