--- a/dash/contrib/plugins/twitch/templates/twitch/render.html
+++ b/dash/contrib/plugins/twitch/templates/twitch/render.html
@@ -3,11 +3,13 @@
         <div class="wrapper">
             <div class="widget-wr">
                 <div class="row widget-title blue white-text">
-                        <h4 class="flow-text">Twitch de {{ plugin.data.channel }} // <a class="white-text" href="{% url "user_profile:profile" plugin.user %}">@{{ plugin.user }}</a></h4>
-                    </div>
+                    <h4 class="flow-text">Twitch de {{ plugin.data.channel }} // <a class="white-text"
+                                                                                    href="{% url "user_profile:profile" plugin.user %}">@{{ plugin.user }}</a>
+                    </h4>
                 </div>
-                <div id="twitch-embed"></div>
             </div>
+            <div id="twitch-embed"></div>
+        </div>
     </div>
 </div>
 
@@ -16,10 +18,13 @@
 
 <!-- Create a Twitch.Embed object that will render within the "twitch-embed" root element. -->
 <script type="text/javascript">
-var channel = "{{ plugin.data.channel }}";
-new Twitch.Embed("twitch-embed", {
-	width: "100%",
-	height: 400,
-	channel: channel
-});
+    var channel = "{{ plugin.data.channel }}";
+    new Twitch.Embed("twitch-embed", {
+        width: "100%",
+        height: 400,
+        channel: channel,
+        autoplay: false,
+        layout: "video",
+
+    });
 </script>
