--- a/dash/templates/dash/delete_dashboard_workspace.html
+++ b/dash/templates/dash/delete_dashboard_workspace.html
@@ -3,7 +3,7 @@
 
 {% block body-attrs %} class="standalone"{% endblock body-attrs %}
 
-{% block page-title %}{% blocktrans with workspace_name as workspace_name %}Delete dashboard workspace {{ workspace_name }} {% endblocktrans%}{% endblock %}
+{% block title %}{% blocktrans with workspace_name as workspace_name %}Delete dashboard workspace {{ workspace_name }} {% endblocktrans%}{% endblock %}
 
 {% block workspaces-wrapper %}{% endblock workspaces-wrapper %}
 
