--- a/dash/templates/dash/edit_dashboard_workspace.html
+++ b/dash/templates/dash/edit_dashboard_workspace.html
@@ -3,7 +3,7 @@
 
 {% block body-attrs %} class="standalone"{% endblock body-attrs %}
 
-{% block page-title %}{% trans 'Edit dashboard workspace' %}{% endblock %}
+{% block title %}{% trans 'Edit dashboard workspace' %}{% endblock %}
 
 {% block workspaces-wrapper %}{% endblock workspaces-wrapper %}
 
