--- a/dash/templates/dash/add_dashboard_entry.html
+++ b/dash/templates/dash/add_dashboard_entry.html
@@ -3,7 +3,7 @@
 
 {% block body-attrs %} class="standalone"{% endblock body-attrs %}
 
-{% block page-title %}{% trans 'Add dashboard entry' %}{% endblock %}
+{% block title %}{% trans 'Add dashboard entry' %}{% endblock %}
 
 {% block workspaces-wrapper %}{% endblock workspaces-wrapper %}
 
