--- a/dash/templates/dash/layouts/base_edit_layout.html
+++ b/dash/templates/dash/layouts/base_edit_layout.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block page-title %}{% if current_workspace %}{{ current_workspace.name }} - {% endif %}
+{% block title %}{% if current_workspace %}{{ current_workspace.name }} - {% endif %}
     {% trans 'Edit dashboard' %}{% endblock %}
 {% block content %}
     <div class="container">
