--- a/skyfolk/templates/account/cf-blocked.html
+++ b/skyfolk/templates/account/cf-blocked.html
@@ -14,7 +14,7 @@
 {% block cf-title %}
     <div class="hgroup">
         <h4 class="cn"> Usuarios bloqueados </h4>
-        <h6 class="ch"> Administra a los usuarios que actualmente tienes bloqueados. </h6>
+        <h6 class="ch"> Administra a los usuarios que actualmente tienes bloqueados</h6>
     </div>
 {% endblock %}
 {% block cf-form %}
