--- a/skyfolk/templates/account/cf-changepass.html
+++ b/skyfolk/templates/account/cf-changepass.html
@@ -7,7 +7,7 @@
 {% block cf-title %}
     <div class="hgroup">
         <h4 class="cn"> Contraseña </h4>
-        <h6 class="ch"> Cambia tu contraseña o recupera tu contraseña actual.</h6>
+        <h6 class="ch"> Cambia tu contraseña o recupera tu contraseña actual</h6>
     </div>
 {% endblock %}
 {% block cf-form %}
