--- a/skyfolk/templates/account/cf-notifications.html
+++ b/skyfolk/templates/account/cf-notifications.html
@@ -2,7 +2,7 @@
 {% block cf-title %}
     <div class="hgroup">
         <h4 class="cn"> Notificaciones </h4>
-        <h6 class="ch"> Configura que tipo de notificaciones deseas recibir.</h6>
+        <h6 class="ch"> Configura que tipo de notificaciones deseas recibir</h6>
     </div>
 {% endblock %}
 {% block cf-form %}
