--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -35,6 +35,10 @@
                             class="material-icons right">security</i></li>
                     <li id="config-notifications" onclick="toProfile('{% url 'user_profile:account_notifications' %}')">Notificaciones<i
                             class="material-icons right">notifications</i></li>
+                    <li id="config-interests" onclick="toProfile('{% url 'user_profile:account_interests' %}')">Intereses<i
+                            class="material-icons right">thumb_up</i></li>
+                    <li id="config-affinity" onclick="toProfile('{% url 'user_profile:account_affinity' %}')">Afinidad<i
+                            class="material-icons right">mood</i></li>
                     <li id="config-black-list" onclick="toProfile('/config/blocked')">Usuarios bloqueados<i
                             class="material-icons right">block</i></li>
                     <li id="config-delete-account" onclick="toProfile('/config/delete_account')">Eliminar cuenta<i
