--- a/skyfolk/templates/account/cf-affinity.html
+++ b/skyfolk/templates/account/cf-affinity.html
@@ -1,28 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-      <style type="text/css">
+{% extends "account/base_cf.html" %}
+{% load static humanize %}
+{% block cf-title %}
+    <div class="hgroup">
+        <h4 class="cn"> Afinidad </h4>
+        <h6 class="ch"> Visualiza la afinidad con tus contactos</h6>
+    </div>
+{% endblock %}
+{% block extra-css %}
+    <style type="text/css">
         #container {
-            max-width: 100%;
-            height: 100%;
+            width: 100%;
+            height: 400px;
             margin: auto;
         }
     </style>
-</head>
-<body>
-<script src="{% static "js/sigma.min.js" %}"></script>
+{% endblock %}
+{% block cf-form %}
+    <div id="container"></div>
+    <script src="{% static "js/sigma.min.js" %}"></script>
     <script src="{% static "js/sigma.parsers.json.min.js" %}"></script>
+    <script src="{% static "js/sigma.plugins.dragNodes.min.js" %}"></script>
     <script>
         var data = JSON.parse('{{ data|safe }}');
-        var s = new sigma({
+        s = new sigma({
             graph: data,
             container: 'container',
             settings: {
                 defaultNodeColor: '#ec5148'
             }
         });
+        var dragListener = sigma.plugins.dragNodes(s, s.renderers[0]);
     </script>
-</body>
-</html>
+    <script>
+        $('.menu-config').find('li:nth-child(8)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': '#1e88e5'});
+    </script>
+{% endblock %}
