--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -85,19 +85,26 @@ $followcolor: #64b5f6
   border-radius: 0.3rem
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2)
   margin-bottom: 1em
+  word-wrap: break-word
 
 /* Ventana para las opciones de cada pin */
 
 .ventana-pin
   width: 100%
-  height: auto
+  height: 30px
+  line-height: 30px
   display: none
   border-radius: 3px
+  clear: both
 
 .ventana-pin a
   float: right
   font-size: 17px
   margin-right: 14px
+  text-decoration: none
+  color: white
+  &:hover
+    opacity: 0.8
 
 .body-inConf
   background-color: #e6e6e6
@@ -132,7 +139,9 @@ $followcolor: #64b5f6
 .user-pic
   width: 120px
   height: 120px
-
+  & img
+    max-width: 100%
+    max-height: 100%
 /* Posicionamiento default */
 .caja
   width: 90px
@@ -1020,24 +1029,16 @@ ul.table > li
 .trofeos
   position: absolute
   z-index: 9999
-  left: 0
-  right: 0
-  margin-right: auto
-  margin-left: auto
   background-color: #fafafa
   top: 10%
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5)
   display: none
+  min-height: 380px
 
-.trofeos .trofeo-user
-  height: 90px
-  display: inline-block
-  border-radius: 100%
-  background-color: transparent
-  border: 5px solid #1e88e5
-  margin-left: 50px
-  margin-top: 15px
-
+.trofeos .user-award
+  padding: 10px
+  
+  
 .trofeos .trofeos-title
   text-align: center
   color: #212121
@@ -1048,33 +1049,19 @@ ul.table > li
   border-bottom: 1px solid #212121
   width: 80%
 
-.trofeos .wrapper-trofeos
-  position: relative
-  width: 85%
-  margin: auto auto auto 7%
-  height: 570px
-
 .trofeos img
-  width: 60px
-  height: 60px
-  border-radius: 100%
-  margin-left: -5px
-  -webkit-box-shadow: inset 0.2px 0.2px 18px 1px rgba(178, 223, 219, 1)
-  -moz-box-shadow: inset 0.2px 0.2px 18px 1px rgba(178, 223, 219, 1)
-  box-shadow: inset 0.2px 0.2px 18px 1px rgba(178, 223, 219, 1)
-
+  max-width: 100%
+  max-height: 100%
+  
 /* GRUPOS */
 .grupos
   position: absolute
   z-index: 9999
-  left: 0
-  right: 0
-  margin-right: auto
-  margin-left: auto
   background-color: #fafafa
   top: 10%
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5)
   display: none
+  min-height: 380px
 
 .grupos .grupos-title
   text-align: center
@@ -1086,47 +1073,11 @@ ul.table > li
   border-bottom: 1px solid #212121
   width: 80%
 
-.grupos .grupo-user
-  display: inline-block
-  background-color: #000
-  height: 160px
-  margin-left: 43px
-  margin-top: 20px
-  margin-bottom: 20px
-
 .grupos img
-  width: 100%
-  height: 100%
+  max-width: 100%
+  max-height: 100%
 
-.grupos .text-description
-  position: relative
-  top: -90%
-  font-size: 1.4em
-  color: #fff
-  font-weight: 400
-  margin-left: 7px
-
-.grupos .fa-users
-  position: relative
-  margin-top: -30px
-  float: left
-  margin-left: 7px
-  color: #fff
-
-.grupos .fa-heart
-  position: relative
-  margin-top: -30px
-  float: right
-  margin-right: 7px
-  color: #fff
-
-.grupos .fa-users:hover
-  color: #1e88e5
-
-.grupos .fa-heart:hover
-  color: #ec407a
-
-.trofeos
+.workspaces
   position: absolute
   z-index: 9999
   left: 0
@@ -1393,15 +1344,32 @@ ul.table > li
     left: 270px
     top: 147px
 
+.wrapper .widget-wr .widget-item
+  display: block
+  box-shadow: 0 0 10px #ddd
+  padding: 10px
+
+.wrapper .widget-wr .widget-title
+  color: #fff
+
+.wrapper .widget-wr .widget-controls button
+  vertical-align: middle
+
+.wrapper .widget-wr .widget-controls button:hover > i
+  -webkit-transform: rotate(45deg)
+  transform: rotate(45deg)
+  -webkit-transition-duration: 0.1s
+  -webkit-transition-timing-function: ease-in
+  transition-duration: 0.1s
+  transition-timing-function: ease-in
 /* WIDGET ENCUESTA */
 .stock .wrapper
   margin-top: 0
-  height: 457px
 
 .wrapper .widget-wr
-  background-color: #eeeeee
+  background-color: #fff
   width: 100%
-  height: 100%
+  max-height: 100%
   position: relative
   display: block
   margin: auto
@@ -1626,3 +1594,30 @@ span
     background: #81d4fa
     &:hover
       background: rgba(48, 164, 209, 0.3)
+
+
+.placeholder
+  overflow: hidden
+  margin: 0
+  padding: 0
+
+.placeholder .empty-widget-cell
+  position: relative
+  overflow: hidden
+  margin: 0
+  padding: 0
+  z-index: 1
+  background-color: #fff
+
+.placeholder .empty-widget-cell .add-plugin span
+  z-index: 0
+  display: block
+  margin: 30% auto 0 auto
+  width: 100%
+  text-align: center
+  &:hover
+    opacity: 0.8
+
+.placeholder .plugin iframe
+  width: 100%
+  min-height: 300px
